[gd_scene load_steps=4 format=3 uid="uid://ccf72hbemwjm4"]

[ext_resource type="PackedScene" uid="uid://c0ttqk0qajpgj" path="res://Character.tscn" id="1_1dc2i"]
[ext_resource type="Script" path="res://main.gd" id="1_aw3d1"]
[ext_resource type="PackedScene" uid="uid://iaettwvupkte" path="res://enemy.tscn" id="3_274em"]

[node name="main" type="Node2D"]
script = ExtResource("1_aw3d1")
enemyScene = ExtResource("3_274em")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -1
offset_right = 1158.0
offset_bottom = 650.0
color = Color(0.384314, 0, 0.705882, 1)

[node name="Player" parent="." groups=["player"] instance=ExtResource("1_1dc2i")]
unique_name_in_owner = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 23.0
text = "Next spawn in:  "

[node name="Label2" type="Label" parent="CanvasLayer"]
offset_left = 121.0
offset_right = 244.0
offset_bottom = 23.0
text = "Next spawn in:  "

[node name="TimerSpawn" type="Timer" parent="."]
wait_time = 2.0

[node name="Spawner" type="Marker2D" parent="."]
position = Vector2(907, 265)

[connection signal="timeout" from="TimerSpawn" to="." method="_on_timer_spawn_timeout"]
